--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <div>Style me via the external method!</div>
     </body>
 </html>
