Add internal method style text

--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
+        <style>
+            p {
+                background-color: green;
+                color: white;
+                font-size: 18px;
+            }
+        </style>
     </head>
     <body>
         <div>Style me via the external method!</div>
+        <p>I would like to be styled with the internal method, please.</p>
     </body>
 </html>
