--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <body>
         <div>Style me via the external method!</div>
         <p>I would like to be styled with the internal method, please.</p>
+        <button style="background-color: orange; font-size: 18px;"></button>
     </body>
 </html>
